--- a/html/locais.html
+++ b/html/locais.html
@@ -4,6 +4,10 @@
 </h2>
 <div class="pageWrap">
 
+<div class="card">
+    <img src="../img/mapa.png" alt="Denim Jeans" style="width:100%">
+</div>
+
     <p>Endereço:</p>
     <p>Estrada Rio São Paulo Variante Lt:16 Qd:A</p>
     <p>Horários:</p>
