--- a/html/home.html
+++ b/html/home.html
@@ -10,7 +10,7 @@
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="img/app/cortef.jpg" style="width:100%">
+  <img src="img/app/salao.jpg" style="width:100%">
   <div class="text">Caption Two</div>
 </div>
 
